--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -36,7 +36,7 @@
         content: '';
         position: absolute;
         left: 0;
-        bottom: 0;
+        bottom: -0.15em;
         right: 0;
         height: 1px;
         background-color: currentColor;
