--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,7 +1,7 @@
 ---
-import VisuallyHidden from '../components/visually-hidden.astro'
-import IconEmail from '../components/icon-email.vue'
-import Year from '../components/year.vue'
+import VisuallyHidden from './visually-hidden.astro'
+import IconEmail from './icon-email.vue'
+import Year from './year.vue'
 ---
 
 <footer class="footer">
@@ -33,7 +33,8 @@ import Year from '../components/year.vue'
 }
 .copyright {
     pointer-events: all;
-    @include fluid(font-size, 12px, 24px);
+    letter-spacing: 0.02em;
+    @include fluid(font-size, 13px, 17px);
 }
 .email {
     display: flex;
