--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,9 +1,20 @@
+---
+import SplitString from './split-string.vue'
+
+const heading = [
+    'Donna is a draftsperson',
+    'and senior PA based in',
+    'Newcastle, Australia.'
+]
+const link = ['View work']
+---
+
 <div class="hero">
 <h1 class="heading">
-    Donna is a draftsperson and senior PA based in Newcastle, Australia.
+    <SplitString lines={heading} client:load />
 </h1>
 <a class="link" href="#work">
-    View work
+    <SplitString lines={link} client:load />
 </a>
 </div>
 
@@ -13,7 +24,7 @@
 .hero {
     line-height: 1.15;
     @include fluid(font-size, 22px, 72px);
-    @include fluid(padding-left padding-right, 32px, 250px);
+    @include fluid(width, 257px, 933px);
 }
 .link {
     margin-top: 0.5em;
