Add loader to home page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import DefaultLayout from '../layouts/default-layout.astro'
 import Scroll from '../components/scroll.vue'
+import Loader from '../components/loader.vue'
 import Header from '../components/header.astro'
 import Section from '../components/section.astro'
 import Hero from '../components/hero.astro'
@@ -9,6 +10,7 @@ import Footer from '../components/footer.astro'
 
 <DefaultLayout>
 <Scroll view={'.js-view'} client:only />
+<Loader imageUrls={['']} client:load />
 <Header />
 <main class="js-view">
     <Section>
