--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -13,6 +13,8 @@ body {
     -moz-osx-font-smoothing: grayscale;
     line-height: 1.4;
     overflow-y: scroll;
+    // Prevent overscroll in macOS
+    overscroll-behavior-y: none;
 }
 
 blockquote,
@@ -31,7 +33,8 @@ pre {
     margin: 0;
 }
 
-ol, ul {
+ol,
+ul {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -75,21 +78,26 @@ input {
     font-family: inherit;
     font-size: inherit;
     color: inherit;
+
     // Edge
     &::-webkit-input-placeholder {
         color: inherit;
     }
+
     &::placeholder {
         color: inherit;
         opacity: inherit;
     }
+
     &::-ms-clear {
         display: none;
         width: 0;
         height: 0;
     }
+
     // Clears the 'X' from Chrome
     &[type=search] {
+
         &::-webkit-search-decoration,
         &::-webkit-search-cancel-button,
         &::-webkit-search-results-button,
