Pass images as objects to future proof

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,13 +20,13 @@ const fonts = [
     }
 ]
 
-const imageUrls = []
+const images = []
 --- 
 
 <DefaultLayout>
 <Scroll view={'.js-view'} client:only />
 <Loader
-    imageUrls={imageUrls}
+    images={images}
     fonts={fonts}
     client:load
 />
