Only animate spit strings when they're visible

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,10 +17,10 @@ const fonts = [
         name: 'Clash Display',
         url: '/fonts/inter-light.woff2',
         weight: 300,
-    }
+    },
 ]
 
-const images = []
+const images = [{}, {}, {}, {}, {}, {}, {}, {}]
 --- 
 
 <DefaultLayout>
