--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,9 +1,6 @@
-// Personalised reset on top of modern-normalize
+@use 'modern-normalize/modern-normalize.css';
 
-html {
-    height: 100%;
-}
-
+html { height: 100%; }
 body {
     margin: 0;
     height: 100%;
@@ -13,10 +10,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     line-height: 1.4;
     overflow-y: scroll;
-    // Prevent overscroll in macOS
-    overscroll-behavior-y: none;
 }
-
 blockquote,
 dl,
 dd,
@@ -29,17 +23,12 @@ h6,
 hr,
 figure,
 p,
-pre {
-    margin: 0;
-}
-
-ol,
-ul {
+pre { margin: 0; }
+ol, ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
-
 h1,
 h2,
 h3,
@@ -49,12 +38,10 @@ h6 {
     font-size: inherit;
     font-weight: inherit;
 }
-
 a {
     color: inherit;
     text-decoration: inherit;
 }
-
 button {
     cursor: pointer;
     color: inherit;
@@ -64,49 +51,36 @@ button {
     text-align: inherit;
     font-size: inherit;
     letter-spacing: inherit;
+    padding: 0;
 }
-
 button,
 textarea,
 input {
-    &:focus {
-        outline: none;
-    }
+    &:focus { outline: none; }
 }
-
 input {
     font-family: inherit;
     font-size: inherit;
     color: inherit;
-
     // Edge
-    &::-webkit-input-placeholder {
-        color: inherit;
-    }
-
+    &::-webkit-input-placeholder { color: inherit; }
     &::placeholder {
         color: inherit;
         opacity: inherit;
     }
-
     &::-ms-clear {
         display: none;
         width: 0;
         height: 0;
     }
-
-    // Clears the 'X' from Chrome
+    // clears the 'X' from Chrome
     &[type=search] {
-
         &::-webkit-search-decoration,
         &::-webkit-search-cancel-button,
         &::-webkit-search-results-button,
-        &::-webkit-search-results-decoration {
-            display: none;
-        }
+        &::-webkit-search-results-decoration { display: none; }
     }
 }
-
 button,
 textarea,
 input,
