--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,1 +1,9 @@
-<h1>Hello world</h1>
+---
+import LayoutDefault from '../components/layout-default.vue'
+---
+
+<LayoutDefault>
+    <h1>
+        Hello there
+    </h1>
+</LayoutDefault>
