Hydrate layout on load

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import LayoutDefault from '../components/layout-default.vue'
 ---
 
-<LayoutDefault>
+<LayoutDefault client:load>
     <h1>
         Hello there
     </h1>
