Add header to home page instead of layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,8 @@
 ---
-import LayoutDefault from '../components/layout-default.vue'
+import LayoutDefault from '../components/layout-default.astro'
+import Header from '../components/header.vue'
 ---
 
-<LayoutDefault client:load>
-    <h1>
-        Hello there
-    </h1>
+<LayoutDefault>
+    <Header client:load />
 </LayoutDefault>
