--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,17 +1,11 @@
-$font-copy: 'Poppins', sans-serif;
-$font-display: 'Clash Display', sans-serif;
+$font-copy: 'Tex Gyre Heros', sans-serif;
 $font-weight: 400;
 $line-height: 1.3;
 $letter-spacing: -0.027em;
 
-$col-navy: #151F6D;
-$col-primary: #446CFC;
-$col-secondary: #EE4394;
-$col-pale-blue: #98D6E4;
-$col-salmon: #FF8DA1;
-$col-salmon-fade: #{transparentize($col-salmon, 0.3)};
-$col-white: white;
-$col-grey-light: #F9F9F9;
+$col-black: #000000;
+$col-black-select: #{transparentize($col-black, 0.01)};
+$col-white: #FFFFFF;
 
 $ease-out-quint: cubic-bezier(0.22, 1, 0.36, 1);
 $ease-in-out-quint: cubic-bezier(0.83, 0, 0.17, 1);
