Add modern normalize

--- a/src/components/layout-default.astro
+++ b/src/components/layout-default.astro
@@ -21,6 +21,7 @@
 </html>
 
 <style lang="scss">
+@use 'modern-normalize/modern-normalize.css';
 @use '../styles/variables.scss' as *;
 
 @font-face {
