Create dedicated home page vue component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import LayoutDefault from '../components/layout-default.astro'
-import Header from '../components/header.vue'
+import PageHome from '../components/page-home.vue'
 ---
 
 <LayoutDefault>
-    <Header client:load />
+    <PageHome client:load />
 </LayoutDefault>
