Prevent overflow on body and scroll with dbg

--- a/src/components/layout-default.astro
+++ b/src/components/layout-default.astro
@@ -62,7 +62,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     overscroll-behavior-y: none;
     line-height: 1.4;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 
 // These have to be separate selectors otherwise they won't work
