--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -9,7 +9,8 @@ body {
     // Fixes bold looking fonts on macOS in Firefox
     -moz-osx-font-smoothing: grayscale;
     line-height: 1.4;
-    overflow-y: scroll;
+    font-family: inherit;
+    overflow-y: overlay;
 }
 blockquote,
 dl,
@@ -41,22 +42,6 @@ h6 {
 a {
     color: inherit;
     text-decoration: inherit;
-}
-button {
-    cursor: pointer;
-    color: inherit;
-    background: none;
-    border: none;
-    font-family: inherit;
-    text-align: inherit;
-    font-size: inherit;
-    letter-spacing: inherit;
-    padding: 0;
-}
-button,
-textarea,
-input {
-    &:focus { outline: none; }
 }
 input {
     font-family: inherit;
