--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -3,7 +3,7 @@
 
 $vars: (
     col-base-black: black,
-    font-inter: (Inter, Arial, sans-serif),
+    font-interdisplay: ('Inter Display', Arial, sans-serif),
 
     ease-out-quint: cubic-bezier(0.22, 1, 0.36, 1),
     ease-in-out-quint: cubic-bezier(0.83, 0, 0.17, 1),
