--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,5 +1,6 @@
 $col-black-1: #000000;
 $col-grey-1: #F3F3F3;
+$col-white: #FFFFFF;
 $font-interdisplay: ('Inter Display', Arial, sans-serif);
 
 $ease-out-quint: cubic-bezier(0.22, 1, 0.36, 1);
