--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,7 +1,11 @@
 @use 'modern-normalize/modern-normalize.css';
 
-* { position: relative; }
-html { height: 100%; }
+* {
+    position: relative;
+}
+html {
+    height: 100%;
+}
 body {
     margin: 0;
     height: 100%;
@@ -11,7 +15,8 @@ body {
     -moz-osx-font-smoothing: grayscale;
     line-height: 1.4;
     font-family: inherit;
-    overflow-y: overlay;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 blockquote,
 dl,
@@ -25,8 +30,11 @@ h6,
 hr,
 figure,
 p,
-pre { margin: 0; }
-ol, ul {
+pre {
+    margin: 0;
+}
+ol,
+ul {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -49,7 +57,9 @@ input {
     font-size: inherit;
     color: inherit;
     // Edge
-    &::-webkit-input-placeholder { color: inherit; }
+    &::-webkit-input-placeholder {
+        color: inherit;
+    }
     &::placeholder {
         color: inherit;
         opacity: inherit;
@@ -60,11 +70,13 @@ input {
         height: 0;
     }
     // clears the 'X' from Chrome
-    &[type=search] {
+    &[type='search'] {
         &::-webkit-search-decoration,
         &::-webkit-search-cancel-button,
         &::-webkit-search-results-button,
-        &::-webkit-search-results-decoration { display: none; }
+        &::-webkit-search-results-decoration {
+            display: none;
+        }
     }
 }
 button,
@@ -74,4 +86,43 @@ select,
 a {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-tap-highlight-color: transparent;
+}
+button {
+    display: inline-flex;
+    color: inherit;
+    background: none;
+    border: none;
+    font-family: inherit;
+    text-align: inherit;
+    font-size: inherit;
+    letter-spacing: inherit;
+    line-height: inherit;
+    padding: 0;
+    &:focus {
+        outline: none;
+    }
+    &:focus-visible {
+        box-shadow: 0px 0px 0px 2px currentColor;
+    }
+    &:enabled {
+        cursor: pointer;
+    }
+    &:disabled {
+        cursor: not-allowed;
+    }
+}
+img,
+svg,
+video,
+canvas,
+audio,
+iframe,
+embed,
+object {
+    max-width: 100%;
+    display: block;
+    vertical-align: middle;
+}
+svg {
+    fill: currentColor;
 }
